# asteroidz

./: .gitignore  LICENSE  PKGBUILD  README.md  flake.nix  format.sh  meson.build
.github/: FUNDING.yml
.github/workflows/: aur-publish.yml  build-deb.yml  ci-check.yml  release-scenefx.yml
amsg/: amsg.1  amsg.c
assets/: asteroidz-gles.desktop  asteroidz-portals.conf  asteroidz-uwsm.desktop  asteroidz-vulkan.desktop  asteroidz.desktop  asteroidz.portal  config.kdl
contrib/: anim-test.sh  aur-publish-local.sh  hdr-record.sh  kdlnest.py  live-visual-tour.sh  render-matrix-test.sh  waybar-popup-test.sh
contrib/lib/: headless.sh
contrib/regression/: run.sh
contrib/regression/tests/: animations.sh  destroy-virtual-output.sh  dwindle.sh  floating.sh  focus.sh  geometry.sh  hdr.sh  ipc-watch.sh  keybind-combo.sh  layer-shell.sh  layouts.sh  mousebind.sh  multimonitor.sh  overview.sh  scratchpad.sh  scroller.sh  tags.sh  vrr.sh  window-states.sh
contrib/wllayer/: Makefile  wllayer.c
contrib/wlvkbd/: Makefile  wlvkbd.c
contrib/wlvptr/: Makefile  wlvptr.c
docs/: anim-testing.md  faq.md  index.md  installation.md  ipc.md  nix-options.md  quick-start.md  regression-testing.md  screenshot.md  vulkan-journey.md
docs/bindings/: keys.md  mouse-gestures.md
docs/configuration/: basics.md  input.md  miscellaneous.md  monitors.md  xdg-portals.md
docs/visuals/: animations.md  effects.md  status-bar.md  theming.md
docs/window-management/: index.mdx  layouts.md  meta.json  overview.md  rules.md  scratchpad.md  special-workspaces.md
mmsg/: amsg.1  mmsg.c
nix/: default.nix  generate-options.nix  hm-modules.nix  nixos-modules.nix
packaging/: ubuntu-install.sh  ubuntu-waybar-install.sh
packaging/deb/: build.sh
perf/: asteroidz-perf  asteroidz-perf-collect  bench-bare.conf  bench-noblur.conf  bench-noshadow.conf  bench-scroll.conf  bench.conf  bench.sh  suite.sh
protocols/: dwl-ipc-unstable-v2.xml  meson.build
src/: asteroidz.c
src/action/: client.h
src/animation/: client.h  common.h  layer.h  tag.h
src/client/: client.h
src/common/: corner_location.h  util.c
src/compat/: nofx.h
src/config/: kdl.h  parse_config.h
src/data/: static_keymap.h
src/dispatch/: bind_declare.h  bind_define.h
src/draw/: text-node.c  text-node.h  ufo-node.c  ufo-node.h
src/ext-protocol/: all.h  background-effect.h  dwl-ipc.h  foreign-toplevel.h  frog-color-management.h  modern.h  tearing.h  text-input.h
src/fetch/: client.h  common.h  monitor.h
src/ipc/: global-shortcuts-portal.h  ipc.h  session-bus.h
src/layout/: arrange.h  dwindle.h  floating.h  horizontal.h  layout.h  overview.h  scroll.h  vertical.h
